--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
                     //set the heading element
                     updateTotal();
                     renderListView(arrTotal);
+			//set input to blank
+		    inputElement.value = "";
+                    inputDesc.value = "";
                     }else {
                         inputElement.classList.add("is-invalid");
                     }
