--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<title>MyPiggyBank</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="./css/main.css">
 		<link
 			rel="stylesheet"
 			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -27,22 +28,25 @@
         <div class="container">
             <div class="jumbotron mt-4">
                 <div class="row">
-                    <div class="col-md-4" id="headerIncome">Total Income</div>
-                    <div class="col-md-4" id="headerExpense">Total Expense</div>
-                    <div class="col-md-4" id="headerItem">Total balance</div>
+                    <div class="col-md-4" id="headerIncome">Total Income:</div>
+                    <div class="col-md-4" id="headerExpense">Total Expense:</div>
+                    <div class="col-md-4" id="headerItem">Total balance:</div>
                 </div>
             </div>
             <div class="jumbotron mt-4">
-                <form name="mainForm">
-                    <div>
+                <form name="mainForm" id="mainForm">
+                    <div class="input-group mb-3">
                         Please select your preferred income/expense: 
-                        <input type="radio" id="incomeType"
-                        name="sourceType" value="incomeType">
-                        <label for="incomeType">incomeType</label>
-
-                        <input type="radio" id="expenseType"
-                        name="sourceType" value="expenseType">
-                        <label for="expenseType">expenseType</label>
+                        <div class="options">
+                            <input type="radio" id="incomeType"
+                            name="sourceType" value="incomeType" checked>
+                            <label for="incomeType">Income Type</label>
+                        </div>
+                        <div class="options">
+                            <input type="radio" id="expenseType"
+                            name="sourceType" value="expenseType">
+                            <label for="expenseType">Expense Type</label>
+                        </div>
                     </div>
                     <div class="input-group mb-3">
                         <input
@@ -77,7 +81,7 @@
                             required="required"
                         />
                         <div class="input-group-append">
-                            <button class="btn btn-outline-primary" type="button" id="btnSelector">Add</button>
+                            <button class="btn btn-outline-primary" type="submit" id="btnSelector">Add</button>
                         </div>
                         <div class="invalid-tooltip">
                             Please check the input
